--- a/Core_Proje/Views/Skill/AddSkill.cshtml
+++ b/Core_Proje/Views/Skill/AddSkill.cshtml
@@ -4,14 +4,17 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>AddSkill</h1>
-<form class="form-control" method="post">
-    @Html.Label("Yetenek Başlığı")
-    <br />
-    <input type="text" name="Title" class="form-control" />
-    <br />
-    <label>Değer</label>
-    <input type="text" name="Value" class="form-control" />
-    <br />
-    <button class="btn btn-outline-info">Kaydet</button>
-</form>
+<div class="card-header border-0">
+    <h3 class="mb-0">Yetenek Ekleme Sayfası</h3>
+    <form class="form-group" method="post">
+        <br />
+        <label>Yetenek Başlığı</label>
+        <input type="text" name="Title" class="form-control" />
+        <br />
+        <label>Değer</label>
+        <input type="text" name="Value" class="form-control" />
+        <br />
+        <button class="btn btn-outline-info">Kaydet</button>
+    </form>
+
+</div>
