--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -52,6 +52,6 @@
             }
         </tbody>
     </table>
-    <a href="#" class="btn btn-primary">Yeni Yetenek Ekle</a>
+    <a href="/Skill/AddSkill/" class="btn btn-primary">Yeni Yetenek Ekle</a>
 </div>
 
