--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -43,7 +43,7 @@
                         </div>
                     </td>
                     <td>
-                        <a href="#" class="btn btn-danger">Sil</a>
+                        <a href="/Skill/DeleteSkill/@item.SkillID" class="btn btn-danger">Sil</a>
                     </td>
                     <td>
                         <a href="#" class="btn btn-success">Güncelle</a>
