--- a/Core_Proje/Views/Skill/Index.cshtml
+++ b/Core_Proje/Views/Skill/Index.cshtml
@@ -46,7 +46,7 @@
                         <a href="/Skill/DeleteSkill/@item.SkillID" class="btn btn-danger">Sil</a>
                     </td>
                     <td>
-                        <a href="#" class="btn btn-success">Güncelle</a>
+                        <a href="/Skill/UpdateSkill/@item.SkillID" class="btn btn-success">Güncelle</a>
                     </td>
                 </tr>
             }
