--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -37,15 +37,15 @@
                         @item.Date
                     </td>
                     <td>
-                        <a href="/Skill/DeleteSkill/@item.ExperienceID" class="btn btn-danger">Sil</a>
+                        <a href="/Experience/DeleteExperience/@item.ExperienceID" class="btn btn-danger">Sil</a>
                     </td>
                     <td>
-                        <a href="/Skill/UpdateSkill/@item.ExperienceID" class="btn btn-success">Güncelle</a>
+                        <a href="/Experience/UpdateExperience/@item.ExperienceID" class="btn btn-success">Güncelle</a>
                     </td>
                 </tr>
             }
         </tbody>
     </table>
-    <a href="/Skill/AddSkill/" class="btn btn-primary">Yeni Deneyim Ekle</a>
+    <a href="/Experience/AddExperience/" class="btn btn-primary">Yeni Deneyim Ekle</a>
 </div>
 
