--- a/Core_Proje/Views/Admin/PartialSideBar.cshtml
+++ b/Core_Proje/Views/Admin/PartialSideBar.cshtml
@@ -34,7 +34,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="login.html">
+                <a class="nav-link" href="/Portfolio/Index/">
                     <i class="ni ni-key-25 text-info"></i>
                     <span class="nav-link-text">Projeler</span>
                 </a>
