--- a/Core_Proje/Views/Feature/Index.cshtml
+++ b/Core_Proje/Views/Feature/Index.cshtml
@@ -1,8 +1,27 @@
-﻿
+﻿@model EntityLayer.Concrete.Feature
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
-<h1>Burası content</h1>
+@using (Html.BeginForm("Index", "Feature", FormMethod.Post))
+{
+    <div class="card-header border-0">
+        <h3 class="mb-0">Öne Çıkan Post Düzenleme Sayfası</h3>
+        @Html.HiddenFor(x => x.FeatureID)
+        <br />
+        @Html.Label("Başlık")
+        @Html.TextBoxFor(x => x.Header, new { @class = "form-control" })
+        <br />
+        @Html.Label("Ad Soyad")
+        @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+        <br />
+        @Html.Label("Pozisyon")
+        @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+        <br />
+        <button class="btn btn-outline-info">Kaydet</button>
+
+
+    </div>
+}
 
