--- a/Core_Proje/Views/Experience/Index.cshtml
+++ b/Core_Proje/Views/Experience/Index.cshtml
@@ -28,8 +28,8 @@
                                 <td>@item.ExperienceID</td>
                                 <td>@item.Name</td>
                                 <td>@item.Date</td>
-                                <td><a href="#" class="btn btn-outline-danger">Sil</a></td>
-                                <td><a href="#" class="btn btn-outline-success">Güncelle</a></td>
+                                <td><a href="/Experience/DeleteExperience/@item.ExperienceID" class="btn btn-outline-danger">Sil</a></td>
+                                <td><a href="/Experience/UpdateExperience/@item.ExperienceID" class="btn btn-outline-success">Güncelle</a></td>
                             </tr>
                         }
                     </tbody>
