--- a/Core_Proje/Views/Experience/AddExperience.cshtml
+++ b/Core_Proje/Views/Experience/AddExperience.cshtml
@@ -6,24 +6,30 @@
 
 @using (Html.BeginForm("AddExperience", "Experience", FormMethod.Post))
 {
-    <div class="card-header border-0">
-        <h3 class="mb-0">Deneyim Ekleme Sayfası</h3>
-        <br />
-        @Html.Label("Deneyim Başlığı")
-        @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-        <br />
-        @Html.Label("Tarih")
-        @Html.TextBoxFor(x => x.Date, new { @class = "form-control" })
-        <br />
-        @Html.Label("Resim Url")
-        @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
-        <br />
-        @Html.Label("Açıklama")
-        @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
-        <br />
-        <button class="btn btn-outline-info">Kaydet</button>
-
-
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Yeni Deneyim Ekle</h4>
+                <p class="card-description"> Basic form elements </p>
+                <form class="forms-sample">
+                    <div class="form-group">
+                        <label>Başlık</label>
+                        <input type="text" class="form-control" name="Name">
+                    </div>
+                    <div class="form-group">
+                        <label>Tarih</label>
+                        <input type="text" class="form-control" name="Date">
+                    </div>
+                    <div class="form-group">
+                        <label>Açıklama</label>
+                        <textarea class="form-control" name="Description" rows="6"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
+                    <button class="btn btn-dark">İptal</button>
+                </form>
+            </div>
+        </div>
     </div>
+
 }
 
