--- a/Core_Proje/Views/Experience/UpdateExperience.cshtml
+++ b/Core_Proje/Views/Experience/UpdateExperience.cshtml
@@ -1,30 +1,37 @@
 ﻿@model EntityLayer.Concrete.Experience
 @{
     ViewData["Title"] = "UpdateExperience";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
 @using (Html.BeginForm("UpdateExperience", "Experience", FormMethod.Post))
 {
-    <div class="card-header border-0">
-        <h3 class="mb-0">Deneyim Düzenleme Sayfası</h3>
-        <br />
-        @Html.HiddenFor(x => x.ExperienceID)
-        @Html.Label("Deneyim Başlığı")
-        @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
-        <br />
-        @Html.Label("Tarih")
-        @Html.TextBoxFor(x => x.Date, new { @class = "form-control" })
-        <br />
-        @Html.Label("Resim Url")
-        @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
-        <br />
-        @Html.Label("Açıklama")
-        @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
-        <br />
-        <button class="btn btn-outline-success">Güncelle</button>
-
-
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">Deneyim Düzenleme Paneli</h4>
+            <form class="forms-sample">
+                <div class="form-group">
+                    <label>ID</label>
+                    @Html.TextBoxFor(x => x.ExperienceID, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label>Başlık</label>
+                    @Html.TextBoxFor(x => x.Name, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label>Tarih</label>
+                    @Html.TextBoxFor(x => x.Date, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <label>Açıklama</label>
+                    @Html.TextAreaFor(x => x.Description, 6, 3, new { @class = "form-control" })
+                </div>
+                <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
+                <button class="btn btn-dark">İptal</button>
+            </form>
+        </div>
     </div>
+</div>
 }
 
