--- a/Core_Proje/Views/Dashboard/Index.cshtml
+++ b/Core_Proje/Views/Dashboard/Index.cshtml
@@ -34,28 +34,28 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     @*<div class="row">
-                        <div class="col-12 grid-margin stretch-card">
-                            <div class="card corona-gradient-card">
-                                <div class="card-body py-0 px-0 px-sm-3">
-                                    <div class="row align-items-center">
-                                        <div class="col-4 col-sm-3 col-xl-2">
-                                            <img src="assets/images/dashboard/Group126@2x.png" class="gradient-corona-img img-fluid" alt="">
-                                        </div>
-                                        <div class="col-5 col-sm-7 col-xl-8 p-0">
-                                            <h4 class="mb-1 mb-sm-0">Want even more features?</h4>
-                                            <p class="mb-0 font-weight-normal d-none d-sm-block">Check out our Pro version with 5 unique layouts!</p>
-                                        </div>
-                                        <div class="col-3 col-sm-2 col-xl-2 pl-0 text-center">
-                                            <span>
-                                                <a href="https://www.bootstrapdash.com/product/corona-admin-template/" target="_blank" class="btn btn-outline-light btn-rounded get-started-btn">Upgrade to PRO</a>
-                                            </span>
-                                        </div>
-                                    </div>
-                                </div>
+            <div class="col-12 grid-margin stretch-card">
+                <div class="card corona-gradient-card">
+                    <div class="card-body py-0 px-0 px-sm-3">
+                        <div class="row align-items-center">
+                            <div class="col-4 col-sm-3 col-xl-2">
+                                <img src="assets/images/dashboard/Group126@2x.png" class="gradient-corona-img img-fluid" alt="">
+                            </div>
+                            <div class="col-5 col-sm-7 col-xl-8 p-0">
+                                <h4 class="mb-1 mb-sm-0">Want even more features?</h4>
+                                <p class="mb-0 font-weight-normal d-none d-sm-block">Check out our Pro version with 5 unique layouts!</p>
+                            </div>
+                            <div class="col-3 col-sm-2 col-xl-2 pl-0 text-center">
+                                <span>
+                                    <a href="https://www.bootstrapdash.com/product/corona-admin-template/" target="_blank" class="btn btn-outline-light btn-rounded get-started-btn">Upgrade to PRO</a>
+                                </span>
                             </div>
                         </div>
-                    </div>*@
-                    
+                    </div>
+                </div>
+            </div>
+        </div>*@
+
                     @await Component.InvokeAsync("FeatureStatistics")
 
                     <div class="row">
@@ -85,69 +85,13 @@
                                 </div>
                             </div>
                         </div>
-                        
+
 
                         @await Component.InvokeAsync("Projects")
                     </div>
-                    <div class="row">
-                        <div class="col-sm-4 grid-margin">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5>Revenue</h5>
-                                    <div class="row">
-                                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
-                                            <div class="d-flex d-sm-block d-md-flex align-items-center">
-                                                <h2 class="mb-0">$32123</h2>
-                                                <p class="text-success ml-2 mb-0 font-weight-medium">+3.5%</p>
-                                            </div>
-                                            <h6 class="text-muted font-weight-normal">11.38% Since last month</h6>
-                                        </div>
-                                        <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
-                                            <i class="icon-lg mdi mdi-codepen text-primary ml-auto"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 grid-margin">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5>Sales</h5>
-                                    <div class="row">
-                                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
-                                            <div class="d-flex d-sm-block d-md-flex align-items-center">
-                                                <h2 class="mb-0">$45850</h2>
-                                                <p class="text-success ml-2 mb-0 font-weight-medium">+8.3%</p>
-                                            </div>
-                                            <h6 class="text-muted font-weight-normal"> 9.61% Since last month</h6>
-                                        </div>
-                                        <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
-                                            <i class="icon-lg mdi mdi-wallet-travel text-danger ml-auto"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-4 grid-margin">
-                            <div class="card">
-                                <div class="card-body">
-                                    <h5>Purchase</h5>
-                                    <div class="row">
-                                        <div class="col-8 col-sm-12 col-xl-8 my-auto">
-                                            <div class="d-flex d-sm-block d-md-flex align-items-center">
-                                                <h2 class="mb-0">$2039</h2>
-                                                <p class="text-danger ml-2 mb-0 font-weight-medium">-2.1% </p>
-                                            </div>
-                                            <h6 class="text-muted font-weight-normal">2.27% Since last month</h6>
-                                        </div>
-                                        <div class="col-4 col-sm-12 col-xl-4 text-center text-xl-right">
-                                            <i class="icon-lg mdi mdi-monitor text-success ml-auto"></i>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+                    @await Component.InvokeAsync("StatisticsDashboard")
+
                     <div class="row ">
                         <div class="col-12 grid-margin">
                             <div class="card">
@@ -558,4 +502,3 @@
     <script src="~/corona-free-dark-bootstrap-admin-template-1.0.0/template/assets/js/dashboard.js"></script>
     <!-- End custom js for this page -->
 </body>
-</html>
