Dashboard message panel regulation.

--- a/Core_Proje/Views/Dashboard/Index.cshtml
+++ b/Core_Proje/Views/Dashboard/Index.cshtml
@@ -33,28 +33,6 @@
         <div class="container-fluid page-body-wrapper">
             <div class="main-panel">
                 <div class="content-wrapper">
-                    @*<div class="row">
-            <div class="col-12 grid-margin stretch-card">
-                <div class="card corona-gradient-card">
-                    <div class="card-body py-0 px-0 px-sm-3">
-                        <div class="row align-items-center">
-                            <div class="col-4 col-sm-3 col-xl-2">
-                                <img src="assets/images/dashboard/Group126@2x.png" class="gradient-corona-img img-fluid" alt="">
-                            </div>
-                            <div class="col-5 col-sm-7 col-xl-8 p-0">
-                                <h4 class="mb-1 mb-sm-0">Want even more features?</h4>
-                                <p class="mb-0 font-weight-normal d-none d-sm-block">Check out our Pro version with 5 unique layouts!</p>
-                            </div>
-                            <div class="col-3 col-sm-2 col-xl-2 pl-0 text-center">
-                                <span>
-                                    <a href="https://www.bootstrapdash.com/product/corona-admin-template/" target="_blank" class="btn btn-outline-light btn-rounded get-started-btn">Upgrade to PRO</a>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>*@
 
                     @await Component.InvokeAsync("FeatureStatistics")
 
@@ -94,74 +72,7 @@
 
                     @await Component.InvokeAsync("ProjectList")
                     <div class="row">
-                        <div class="col-md-6 col-xl-4 grid-margin stretch-card">
-                            <div class="card">
-                                <div class="card-body">
-                                    <div class="d-flex flex-row justify-content-between">
-                                        <h4 class="card-title">Messages</h4>
-                                        <p class="text-muted mb-1 small">View all</p>
-                                    </div>
-                                    <div class="preview-list">
-                                        <div class="preview-item border-bottom">
-                                            <div class="preview-thumbnail">
-                                                <img src="assets/images/faces/face6.jpg" alt="image" class="rounded-circle" />
-                                            </div>
-                                            <div class="preview-item-content d-flex flex-grow">
-                                                <div class="flex-grow">
-                                                    <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                                        <h6 class="preview-subject">Leonard</h6>
-                                                        <p class="text-muted text-small">5 minutes ago</p>
-                                                    </div>
-                                                    <p class="text-muted">Well, it seems to be working now.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="preview-item border-bottom">
-                                            <div class="preview-thumbnail">
-                                                <img src="assets/images/faces/face8.jpg" alt="image" class="rounded-circle" />
-                                            </div>
-                                            <div class="preview-item-content d-flex flex-grow">
-                                                <div class="flex-grow">
-                                                    <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                                        <h6 class="preview-subject">Luella Mills</h6>
-                                                        <p class="text-muted text-small">10 Minutes Ago</p>
-                                                    </div>
-                                                    <p class="text-muted">Well, it seems to be working now.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="preview-item border-bottom">
-                                            <div class="preview-thumbnail">
-                                                <img src="assets/images/faces/face9.jpg" alt="image" class="rounded-circle" />
-                                            </div>
-                                            <div class="preview-item-content d-flex flex-grow">
-                                                <div class="flex-grow">
-                                                    <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                                        <h6 class="preview-subject">Ethel Kelly</h6>
-                                                        <p class="text-muted text-small">2 Hours Ago</p>
-                                                    </div>
-                                                    <p class="text-muted">Please review the tickets</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="preview-item border-bottom">
-                                            <div class="preview-thumbnail">
-                                                <img src="assets/images/faces/face11.jpg" alt="image" class="rounded-circle" />
-                                            </div>
-                                            <div class="preview-item-content d-flex flex-grow">
-                                                <div class="flex-grow">
-                                                    <div class="d-flex d-md-block d-xl-flex justify-content-between">
-                                                        <h6 class="preview-subject">Herman May</h6>
-                                                        <p class="text-muted text-small">4 Hours Ago</p>
-                                                    </div>
-                                                    <p class="text-muted">Thanks a lot. It was easy to fix it .</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        @await Component.InvokeAsync("MessageList")
                         <div class="col-md-6 col-xl-4 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
