--- a/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Register/Index.cshtml
@@ -72,6 +72,9 @@
                                     <span asp-validation-for="Email" class="text-danger"></span>
                                     <input type="text" asp-for="Email" class="form-control" />
                                 </div>
+                                <div class="text-danger" asp-validation-summary="ModelOnly">
+
+                                </div>
                                 <div class="mt-3">
                                     <button class="btn btn-primary">Kayıt Ol</button>
                                     @*<a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" asp-action="Index">Kayıt Ol</a>*@
