--- a/Core_Proje/Areas/Writer/Views/Message/SenderMessage.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/SenderMessage.cshtml
@@ -1,22 +1,24 @@
 ﻿@using EntityLayer.Concrete
 @model List<WriterMessage>
+
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "SenderMessage";
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
 @*@{string color = ""; }*@
+
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">Gelen Kutusu</h4>
+            <h4 class="card-title">Giden Kutusu</h4>
             <div class="table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
                             <th>#</th>
                             <th>Konu</th>
-                            <th>Gönderen</th>
+                            <th>Alıcı</th>
                             <th>Detaylar</th>
                         </tr>
                     </thead>
