--- a/Core_Proje/Areas/Writer/Views/Default/_SideBarPartial.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Default/_SideBarPartial.cshtml
@@ -7,9 +7,23 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/Writer/Message/Index/">
-                <i class="icon-layout menu-icon"></i>
-                <span class="menu-title">Mesajlar</span>
+            <a class="nav-link" href="/Writer/Message/ReceiverMessage/">
+                <i class="ti-notepad menu-icon"></i>
+                <span class="menu-title">Gelen Mesajlar</span>
+            </a>
+
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/SenderMessage/">
+                <i class="ti-agenda menu-icon"></i>
+                <span class="menu-title">Giden Mesajlar</span>
+            </a>
+
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/Writer/Message/AddMessage/">
+                <i class="ti-cloud menu-icon"></i>
+                <span class="menu-title">Yeni Mesajlar</span>
             </a>
 
         </li>
@@ -34,7 +48,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/Writer/Login/LogOut/">
-                <i class="icon-paper menu-icon"></i>
+                <i class="ti-power-off menu-icon"></i>
                 <span class="menu-title">Çıkış Yap</span>
             </a>
         </li>
