--- a/Core_Proje/Areas/Writer/Views/Message/ReceiverMessage.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/ReceiverMessage.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/Shared/_WriterLayout.cshtml";
 }
 
-@*@{string color = ""; }*@
 <div class="col-lg-12 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
@@ -17,37 +16,20 @@
                             <th>#</th>
                             <th>Konu</th>
                             <th>Gönderen</th>
+                            <th>Tarih</th>
                             <th>Detaylar</th>
                         </tr>
                     </thead>
                     <tbody>
                         @foreach (var item in Model)
                         {
-                            //if (item.WriterMessageId == "Yeni Yazı")
-                            //{
-                            //    color = "badge badge-danger";
-                            //}
-                            //if (item.Status == "Yeni Video")
-                            //{
-                            //    color = "badge badge-warning";
-                            //}
-                            //if (item.Status == "Konferans")
-                            //{
-                            //    color = "badge badge-info";
-                            //}
-                            //if (item.Status == "Workshop")
-                            //{
-                            //    color = "badge badge-success";
-                            //}
-                            //if (item.Status == "Blog Yazısı")
-                            //{
-                            //    color = "badge badge-primary";
-                            //}
+
                             <tr>
                                 <th>@item.WriterMessageId</th>
                                 <td>@item.Subject</td>
+                                <td>@item.SenderName</td>
                                 <td>@(((DateTime)@item.Date).ToString("dd-MMM-yyyy"))</td>
-                                <td><a href="/Writer/Default/AnnouncementDetails/@item.WriterMessageId" class="btn btn-outline-primary">Detaylar</a></td>
+                                <td><a href="/Writer/Message/MessageDetails/@item.WriterMessageId" class="btn btn-outline-primary">Detaylar</a></td>
                             </tr>
                         }
                     </tbody>
