--- a/Core_Proje/Areas/Writer/Views/Message/SendMessage.cshtml
+++ b/Core_Proje/Areas/Writer/Views/Message/SendMessage.cshtml
@@ -13,7 +13,7 @@
         @Html.TextBoxFor(x => x.Receiver, new { @class = "form-control" })
         <br />
         @Html.Label("Konu")
-        @Html.TextAreaFor(x => x.Subject, 10, 3, new { @class = "form-control" })
+        @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" })
         <br />
         @Html.Label("Mesaj")
         @Html.TextAreaFor(x => x.MessageContent, 10, 3, new { @class = "form-control" })
