--- a/Core_Proje/Views/About/Index.cshtml
+++ b/Core_Proje/Views/About/Index.cshtml
@@ -1,39 +1,53 @@
 ﻿@model EntityLayer.Concrete.About
 @{
     ViewData["Title"] = "Index";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
 @using (Html.BeginForm("Index", "About", FormMethod.Post))
 {
-<div class="card-header border-0">
-    <h3 class="mb-0">Öne Çıkan Post Düzenleme Sayfası</h3>
-    @Html.HiddenFor(x => x.AboutID)
-    <br />
-    @Html.Label("Başlık")
-    @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
-    <br />
-    @Html.Label("Açıklama")
-    @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
-    <br />
-    @Html.Label("Görsel")
-    @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
-    <br />
-    @Html.Label("Yaş")
-    @Html.TextBoxFor(x => x.Age, new { @class = "form-control" })
-    <br />
-    @Html.Label("Email")
-    @Html.TextBoxFor(x => x.Mail, new { @class = "form-control" })
-    <br />
-    @Html.Label("Telefon")
-    @Html.TextBoxFor(x => x.Phone, new { @class = "form-control" })
-    <br />
-    @Html.Label("Adres")
-    @Html.TextBoxFor(x => x.Address, new { @class = "form-control" })
-    <br />
-    <button class="btn btn-outline-success">Kaydet</button>
-
-
-</div>
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title">Hakkımda Düzenleme Paneli</h4>
+                <form class="forms-sample">
+                    <div class="form-group">
+                        <label>ID</label>
+                        @Html.TextBoxFor(x => x.AboutID, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Başlık</label>
+                        @Html.TextBoxFor(x => x.Title, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Yaş</label>
+                        @Html.TextBoxFor(x => x.Age, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Mail</label>
+                        @Html.TextBoxFor(x => x.Mail, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Adres</label>
+                        @Html.TextBoxFor(x => x.Address, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Telefon</label>
+                        @Html.TextBoxFor(x => x.Phone, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Görsel Url</label>
+                        @Html.TextBoxFor(x => x.ImageUrl, new { @class = "form-control" })
+                    </div>
+                    <div class="form-group">
+                        <label>Açıklama</label>
+                        @Html.TextAreaFor(x => x.Description, 6, 3, new { @class = "form-control" })
+                    </div>
+                    <button type="submit" class="btn btn-primary mr-2">Kaydet</button>
+                    <button class="btn btn-dark">İptal</button>
+                </form>
+            </div>
+        </div>
+    </div>
 }
 
