--- a/Core_Proje/Views/Admin/NewSideBar.cshtml
+++ b/Core_Proje/Views/Admin/NewSideBar.cshtml
@@ -60,23 +60,15 @@
         </a>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" data-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
+        <a class="nav-link" href="/Skill/Index/">
             <span class="menu-icon">
-                <i class="mdi mdi-laptop"></i>
+                <i class="mdi mdi-playlist-play"></i>
             </span>
             <span class="menu-title">Yeteneklerim</span>
-            <i class="menu-arrow"></i>
         </a>
-        <div class="collapse" id="ui-basic">
-            <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/buttons.html">Buttons</a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/dropdowns.html">Dropdowns</a></li>
-                <li class="nav-item"> <a class="nav-link" href="../../pages/ui-features/typography.html">Typography</a></li>
-            </ul>
-        </div>
     </li>
     <li class="nav-item menu-items">
-        <a class="nav-link" href="../../pages/forms/basic_elements.html">
+        <a class="nav-link" href="/Experience/Index/">
             <span class="menu-icon">
                 <i class="mdi mdi-playlist-play"></i>
             </span>
@@ -129,6 +121,14 @@
                 <i class="mdi mdi-contacts"></i>
             </span>
             <span class="menu-title">İletişim</span>
+        </a>
+    </li>
+    <li class="nav-item menu-items">
+        <a class="nav-link" href="/About/Index/">
+            <span class="menu-icon">
+                <i class="mdi mdi-account"></i>
+            </span>
+            <span class="menu-title">Hakkımda</span>
         </a>
     </li>
     <li class="nav-item menu-items">
