Ajax post transactions.

--- a/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
@@ -164,6 +164,7 @@
                     </div>
                     @RenderBody()
                 </div>
+                @await RenderSectionAsync("Scripts")
                 <!-- content-wrapper ends -->
                 <!-- partial:../../partials/_footer.html -->
                 <footer class="footer">
