--- a/Core_Proje/Views/WriterUser/Index.cshtml
+++ b/Core_Proje/Views/WriterUser/Index.cshtml
@@ -1,8 +1,40 @@
-﻿
+﻿@using EntityLayer.Concrete
+@model List<WriterUser>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_NewAdminLayout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="col-md-6">
+    <div class="p-2">
+        <button type="button" id="getlistall" class="btn btn-outline-primary">Verileri Getir</button>
+    </div>
+</div>
 
+<h4 class="text-center">Yazar Listesi</h4>
+<div class="p-2" id="listuser">
+    buraya veriler gelecek.
+</div>
+
+@section Scripts
+{
+    <script>
+
+        $("#getlistall").click(function() {
+            $.ajax({
+                contentType: "application/json",
+                dataType: "json",
+                type: "Get",
+                url: "/WriterUser/ListWriterUser/"
+
+                success: function (func) {
+                    let users = jQuery.parseJSON(func);
+                    console.log(users);
+                }
+            });
+        });
+
+    </script>
+}
+
+<script src="~/lib/jquery/dist/jquery.js"></script>
