--- a/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
+++ b/Core_Proje/Views/Shared/_NewAdminLayout.cshtml
@@ -164,7 +164,7 @@
                     </div>
                     @RenderBody()
                 </div>
-                @await RenderSectionAsync("Scripts")
+                @await RenderSectionAsync("Scripts",required:false)
                 <!-- content-wrapper ends -->
                 <!-- partial:../../partials/_footer.html -->
                 <footer class="footer">
